# RaspberryPi-WebRTC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format-check.yml  docker_build.yml  jetson_docker_build.yml  qemu_build.yml
config/: config.yml
doc/: BUILD.md  BUILD_WEBRTC.md  USE_GPERFTOOLS.md
example/: unix_socket_client.py  virtual_cam.py  yolo_cam.py
examples/: unix_socket_client.py  virtual_cam.py  yolo_cam.py
scripts/: gen_proto.sh
src/: CMakeLists.txt  args.h  conductor.cpp  main.cpp  parser.cpp  rtc_peer.cpp  rtc_peer.h
src/capturer/: CMakeLists.txt  alsa_capturer.cpp  alsa_capturer.h  audio_capturer.h  libargus_buffer_capturer.cpp  libargus_buffer_capturer.h  libargus_capturer.cpp  libargus_capturer.h  libargus_egl_capturer.cpp  libargus_egl_capturer.h  libcamera_capturer.cpp  libcamera_capturer.h  pa_capturer.cpp  pa_capturer.h  v4l2_capturer.cpp  v4l2_capturer.h  video_capturer.h
src/codecs/: frame_processor.h
src/codecs/h264/: CMakeLists.txt  openh264_encoder.cpp  openh264_encoder.h
src/codecs/jetson/: CMakeLists.txt  jetson_encoder.cpp  jetson_encoder.h  jetson_h264_encoder.cpp  jetson_h264_encoder.h  jetson_scaler.cpp  jetson_scaler.h  jetson_video_encoder.cpp  jetson_video_encoder.h
src/codecs/v4l2/: v4l2_codec.cpp  v4l2_codec.h  v4l2_decoder.cpp  v4l2_decoder.h  v4l2_encoder.cpp  v4l2_encoder.h  v4l2_h264_encoder.cpp  v4l2_scaler.cpp  v4l2_scaler.h
src/common/: CMakeLists.txt  logging.h  nv_utils.cpp  nv_utils.h  thread_safe_queue.h  utils.cpp  utils.h  v4l2_frame_buffer.cpp  v4l2_frame_buffer.h  v4l2_utils.cpp  v4l2_utils.h  worker.cpp  worker.h
src/common/interface/: processor.h
src/ipc/: CMakeLists.txt  unix_socket_server.cpp  unix_socket_server.h
src/recorder/: CMakeLists.txt  audio_recorder.cpp  audio_recorder.h  h264_recorder.cpp  h264_recorder.h  jetson_recorder.cpp  jetson_recorder.h  openh264_recorder.cpp  openh264_recorder.h  raw_h264_recorder.cpp  raw_h264_recorder.h  recorder.h  recorder_manager.cpp  recorder_manager.h  v4l2_h264_recorder.cpp  v4l2_h264_recorder.h  video_recorder.cpp  video_recorder.h
src/rtc/: CMakeLists.txt  audio_device_bridge.h  conductor.cpp  conductor.h  custom_video_encoder_factory.cpp  custom_video_encoder_factory.h  customized_video_encoder_factory.cpp  data_channel_subject.cpp  data_channel_subject.h  rtc_channel.cpp  rtc_channel.h  rtc_peer.cpp  rtc_peer.h  sfu_channel.cpp  sfu_channel.h
src/signaling/: CMakeLists.txt  http_service.cpp  mqtt_service.cpp  mqtt_service.h  signaling_service.h  websocket_service.cpp  websocket_service.h
src/track/: scale_track_source.cpp  scale_track_source.h  v4l2dma_track_source.cpp  v4l2dma_track_source.h
test/: test_http_server.cpp  test_jetson_encoder.cpp  test_jetson_scaler.cpp  test_libargus.cpp  test_libcamera.cpp  test_mqtt.cpp  test_recorder.cpp  test_unix_socket_server.cpp  test_v4l2_capturer.cpp  test_v4l2_decoder.cpp  test_v4l2_encoder.cpp  test_v4l2_scaler.cpp  test_websocket.cpp
